chore: bump app version

--- a/.gitea/workflows/tag-and-image.yaml
+++ b/.gitea/workflows/tag-and-image.yaml
@@ -7,7 +7,7 @@ on:
       - main
 
 env:
-  NEXT_TAG: 0.0.2
+  NEXT_TAG: 0.0.3
   REGISTRY: "gitea.dreger.lan"
   IMAGE_NAME: ${{ gitea.repository }}
 
@@ -91,6 +91,7 @@ jobs:
         with:
           context: .
           file: deploy/docker/Dockerfile
+          target: no-api-proxy
           push: true
           platforms: linux/amd64
           provenance: false # https://github.com/docker/build-push-action/issues/820
