--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM nginxinc/nginx-unprivileged:1.27-alpine3.21 as base
+FROM nginxinc/nginx-unprivileged:1.27-alpine3.21 AS base
 
 FROM node:23.11.0-alpine3.21@sha256:86703151a18fcd06258e013073508c4afea8e19cd7ed451554221dd00aea83fc AS builder
 LABEL org.opencontainers.image.source=https://gitea.dreger.lan/sdreger/lib-manager-react-ts
